# const-enum-new

./: Cargo.toml  README.md
src/: lib.rs
tests/: example.rs  test.rs
tests/ui/: 01-fail-missing-repr.rs  01-fail-missing-repr.stderr  02-fail-invalid-type.rs  02-fail-invalid-type.stderr  03-fail-repr-no-type.rs  03-fail-repr-no-type.stderr  04-fail-repr-multiple-type.rs  04-fail-repr-multiple-type.stderr  05-pass-non-const.rs  06-pass-const.rs  07-pass-stable-uint.rs  08-pass-stable-int.rs  09-pass-unstable-types.rs
