[package]
name = "const-enum"
version = "0.1.0"
authors = ["Pascal Mathis <mail@pascalmathis.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ppmathis/const-bitfield"
description = "Procedural derive macro for constant From trait implementations on enums based on repr type."
categories = ["no-std"]
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = "1.0"
quote = "1.0"
